fix(query): align explore children css and breadcrumbs css

--- a/src/app/components_ngrx/work-item-cell/work-item-cell.component.less
+++ b/src/app/components_ngrx/work-item-cell/work-item-cell.component.less
@@ -5,6 +5,12 @@
   display: inline-flex;
   width: ~"calc(e('100% - 20px'))"; // lesshint-disable-line
 }
+
+.wi-detail-query-title {
+  display: inline-flex;
+  width: ~"calc(e('100% - 50px'))"; // lesshint-disable-line
+}
+
 .wi-detail-icon {
   width: 20px;
   opacity: 0;
